--- a/backend/package.json
+++ b/backend/package.json
@@ -10,5 +10,20 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@graphql-tools/merge": "^8.2.10",
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
+    "fastify": "^3.28.0",
+    "fastify-cors": "^6.0.3",
+    "fastify-plugin": "^3.0.1",
+    "mercurius": "^9.3.6",
+    "mercurius-codegen": "^3.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.25",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
+  }
 }
