--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "fastify-cors": "^6.0.3",
     "fastify-plugin": "^3.0.1",
     "mercurius": "^9.3.6",
-    "mercurius-codegen": "^3.3.1"
+    "mercurius-codegen": "^3.3.1",
+    "mongoose": "^6.3.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.25",
