--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "fastify-plugin": "^3.0.1",
     "mercurius": "^9.3.6",
     "mercurius-codegen": "^3.3.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.1"
   },
   "devDependencies": {
