--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   bloc: ^8.0.3
   equatable: ^2.0.3
   flutter_bloc: ^8.0.1
+  url_launcher: ^6.1.0
+  flutter_emoji: ^2.4.0
+  skeletons: ^0.0.3
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +75,10 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
 
+  fonts:
+    - family: ProximaNova
+      fonts:
+        - asset: fonts/proxima_nova/Proxima-Nova-Font.otf
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
