--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   skeletons: ^0.0.3
   grouped_list: ^4.2.0
   intl: ^0.17.0
+  curved_navigation_bar: ^1.0.3
+  custom_navigation_bar: ^0.8.2
 
 dev_dependencies:
   flutter_test:
