--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -85,6 +85,9 @@ flutter:
     - family: ProximaNova
       fonts:
         - asset: fonts/proxima_nova/Proxima-Nova-Font.otf
+    - family: Montserrat
+      fonts:
+        - asset: fonts/montserrat/Montserrat-Bold.ttf
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
