--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   dropdown_search: ^3.0.1
   workmanager: ^0.4.1
   flutter_local_notifications: ^9.5.1
+  flutter_secure_storage: ^5.0.2
+  oauth2_client: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -74,8 +76,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
