--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@graphql-tools/merge": "^8.2.10",
+    "@types/bull": "^3.15.8",
     "axios": "^0.26.1",
+    "bull": "^4.8.3",
     "dotenv": "^16.0.0",
     "fastify": "^3.28.0",
     "fastify-cors": "^6.0.3",
