--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,8 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
     ports:
       - 27017:27017
+  redis:
+    image: redis:5.0.9-alpine
+    command: redis-server
+    ports:
+      - 6379:6379
