--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node build/index.js",
     "dev": "npx ts-node src/index.ts",
-    "build": ""
+    "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
