--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,20 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
     ports:
       - 27017:27017
+  redis:
+    image: redis:5.0.9-alpine
+    command: redis-server
+    ports:
+      - 6379:6379
+  be:
+    build: 
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - 3000:3000
+    environment:
+      - DATABASE_URL=mongodb://root:example@mongo:27017/letsdrop?authSource=admin
+      - REDIS_URL=redis://redis:6379
+    depends_on:
+      - mongo
+      - redis
