--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           heroku config:set DATABASE_URL=$MONGO_DB -a $HEROKU_APP_NAME
           heroku config:set REDIS_URL=$REDIS -a $HEROKU_APP_NAME
         env:
-          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME_BE }}
+          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
           MONGO_DB: ${{ secrets.DATABASE }}
           REDIS: ${{ secrets.REDIS }}
       - name: Add heroku.yml to root
@@ -39,7 +39,7 @@ jobs:
       - name: Add Heroku remote
         run: heroku git:remote --app $HEROKU_APP_NAME
         env:
-          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME_BE }}
+          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
       - name: Set Heroku Stack
         run: heroku stack:set container
       - name: Push to heroku
