--- a/worker/package.json
+++ b/worker/package.json
@@ -20,6 +20,8 @@
     "bullmq": "^1.83.0",
     "dotenv": "^16.0.1",
     "moment": "^2.29.3",
-    "mongodb": "^4.6.0"
+    "mongodb": "^4.6.0",
+    "winston": "^3.7.2",
+    "winston-daily-rotate-file": "^4.6.1"
   }
 }
