--- a/worker/package.json
+++ b/worker/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.35",
+    "@types/throng": "^5.0.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
@@ -21,6 +22,7 @@
     "dotenv": "^16.0.1",
     "moment": "^2.29.3",
     "mongodb": "^4.6.0",
+    "throng": "^5.0.0",
     "winston": "^3.7.2",
     "winston-daily-rotate-file": "^4.6.1"
   }
