--- a/worker/package.json
+++ b/worker/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bullmq": "^1.83.0",
     "dotenv": "^16.0.1",
+    "ioredis": "^5.0.5",
     "moment": "^2.29.3",
     "mongodb": "^4.6.0",
     "throng": "^5.0.0",
